<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <it.michelelacorte.scrollableappbar.ScrollableAppBar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/logo"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </it.michelelacorte.scrollableappbar.ScrollableAppBar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:onClick="launchWebsite"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/websiteId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/website" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/fifthElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="complain"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/mailIconId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/mailicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/firstElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="callIDP"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/telephoneId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/telephone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/secondElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/faxId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/fax" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/thirdElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/streetAdressId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/street_adress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/FifthElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="16dp">-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:padding="16dp">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/mapIconId"-->
                        <!--android:layout_width="40dp"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:src="@drawable/map" />-->

                    <!--<com.airbnb.android.airmapview.AirMapView-->
                        <!--android:id="@+id/map_view"-->
                        <!--android:layout_marginLeft="10dp"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="300dp"-->
                        <!--android:layout_toRightOf="@+id/mapIconId" />-->


                <!--</RelativeLayout>-->
            <!--</android.support.v7.widget.CardView>-->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/developerIconId"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/developer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="5dp"
                        android:padding="7dp"
                        android:text="@string/fourthElOfAbout" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>